# kizi

./: CMakeLists.txt  README.md  xmake.lua
docs/: 内置对象&库速览.md  已知Bug清单.md
examples/: import_std_module_test.kiz  man_or_boy.kiz  range_iter.kiz  return_expr.kiz
libs/builtins/: builtin_functions.cpp
libs/os/: os_lib.cpp
src/: kiz.hpp
src/gc/: gc.hpp
src/ir_gen/: gen_expr.cpp  gen_stmt.cpp
src/kiz_compiler/: lexer.hpp  parser.hpp  symbol.hpp
src/kiz_compiler/api/: kizc.hpp
src/kiz_mir/: opcode.hpp  opcode_kind.def
src/kiz_mir/api/: kmir.hpp
src/kiz_vm/api/: kvm.hpp
src/kstd/: baseio.hpp  kstd.hpp  option.hpp  ptr.hpp  result.hpp  str.hpp  vec.hpp
src/parser/: parse_expr.cpp  parse_stmt.cpp
src/vm/: execute_unit.cpp  handle_import.cpp  vm.hpp
